Fix visual problems when window is resized too small

--- a/css/site.css
+++ b/css/site.css
@@ -24,6 +24,10 @@ footer {
 	margin-top: 30px;
 }
 
+body {
+	min-width: 1200px;
+}
+
 a {
 	text-decoration: none;
 	color: inherit;
